--- a/translations/en.json
+++ b/translations/en.json
@@ -19,6 +19,7 @@
   "hero_description": "We support public and private sector organizations as they navigate complex, interconnected challenges across healthcare, politics, and innovation with tailored strategic solutions grounded in systems thinking.",
   "hero_btn_services": "Our Services",
   "hero_btn_learn": "Learn More",
+  "hero_schedule_consultation": "Schedule a Consultation",
   "about_title": "About Arcline Advisory",
   "about_subtitle": "A global advisory firm built on a model of practice-led expertise, delivering strategic support grounded in real-world implementation",
   "about_heading": "Transforming Complex Challenges into Strategic Solutions",
@@ -62,7 +63,7 @@
   "form_message": "How can we help you?",
   "form_message_placeholder": "Tell us about your health strategy challenge or initiative...",
   "form_submit": "Send Message",
-  "footer_text": "© 2024 Arcline Advisory. All rights reserved. | Global Strategy for Health, Governance, and Innovation",
+  "footer_text": "© 2025 Arcline Advisory. All rights reserved. | Global Strategy for Health, Governance, and Innovation",
   "strategic_advisory_title": "Strategic Advisory",
   "strategic_hero_title": "Strategic Advisory for Complex Systems",
   "strategic_hero_description": "We work with governments, donors, and the private sector to develop and implement comprehensive strategies in health and governance.",
@@ -276,5 +277,44 @@
   "exec_impact_desc": "Our implementation support delivers measurable results and sustainable systems transformation.",
   "exec_cta_title": "Ready to Execute Your Health Strategy?",
   "exec_cta_subtitle": "Get Your Free Implementation Consultation",
-  "exec_cta_button": "Schedule Consultation"
+  "exec_cta_button": "Schedule Consultation",
+  "consultation_hero_title": "Schedule Your Strategic Consultation",
+  "consultation_hero_desc": "Connect with our senior advisors to discuss your strategic challenges, explore opportunities, and chart a path forward together.",
+  "consultation_form_title": "Let's Talk",
+  "consultation_form_subtitle": "Tell us about your organization and what you'd like to discuss. One of our advisors will reach out within 24 hours.",
+  "form_role": "Your Role",
+  "form_topic": "Primary Topic of Interest",
+  "form_topic_select": "-- Select a topic --",
+  "form_topic_diplomacy": "Strategic Diplomacy",
+  "form_topic_risk": "Geopolitical Risk",
+  "form_topic_market": "Market Expansion",
+  "form_topic_other": "Other",
+  "consultation_process_title": "Our Consultation Process",
+  "consultation_step1_title": "Discovery Call",
+  "consultation_step1_desc": "Initial conversation to understand your organization and objectives.",
+  "consultation_step2_title": "Assessment",
+  "consultation_step2_desc": "We analyze your situation and identify key strategic priorities.",
+  "consultation_step3_title": "Recommendations",
+  "consultation_step3_desc": "Customized insights and actionable recommendations tailored to your needs.",
+  "consultation_step4_title": "Next Steps",
+  "consultation_step4_desc": "Partner with us for ongoing strategic support and implementation.",
+  "consultation_benefits_title": "Why Consult with Arcline",
+  "benefit_1_title": "Senior Expertise",
+  "benefit_1_desc": "Direct access to senior advisors with decades of global experience in strategy and geopolitics.",
+  "benefit_2_title": "Global Networks",
+  "benefit_2_desc": "Leverage our established relationships with decision-makers across government, multilateral institutions, and industry.",
+  "benefit_3_title": "Confidentiality",
+  "benefit_3_desc": "Complete discretion and confidentiality in all discussions and recommendations.",
+  "consultation_faq_title": "Frequently Asked Questions",
+  "faq_q1": "What should I prepare for our consultation?",
+  "faq_a1": "We recommend having a clear overview of your organization's current situation, key challenges, and strategic objectives. However, our advisors can guide you through discovery, so no extensive preparation is required.",
+  "faq_q2": "How long is a typical consultation?",
+  "faq_a2": "Initial consultations typically run 60-90 minutes, allowing sufficient time to understand your needs and provide meaningful insights. Ongoing engagements can be customized to your requirements.",
+  "faq_q3": "What is your typical response time?",
+  "faq_a3": "We aim to respond to all consultation requests within 24 hours. For urgent matters, please indicate your timeline in the message field.",
+  "faq_q4": "Is there a cost for an initial consultation?",
+  "faq_a4": "Initial consultations are designed to be exploratory conversations at no cost. If you decide to move forward with an engagement, we'll discuss terms and scope with you directly.",
+  "consultation_cta_title": "Ready to Begin Your Strategic Journey?",
+  "consultation_cta_desc": "Submit the form above or reach out directly to schedule your consultation with one of our senior advisors.",
+  "consultation_form_submit": "Schedule Consultation"
 }
