--- a/translations/ge.json
+++ b/translations/ge.json
@@ -19,6 +19,7 @@
   "hero_description": "ჩვენ ვუზრუნველყოფთ საჯარო და კერძო სექტორის ორგანიზაციების მხარდაჭერას რთული, ურთიერთდაკავშირებული გამოწვევების დაძლევაში ჯანდაცვის, პოლიტიკისა და ინოვაციის სფეროებში სისტემურ აზროვნებაზე დაფუძნებული ინდივიდუალური სტრატეგიული გადაწყვეტილებებით.",
   "hero_btn_services": "ჩვენი სერვისები",
   "hero_btn_learn": "გაიგე მეტი",
+  "hero_schedule_consultation": "დაინიშნეთ კონსულტაცია",
   "about_title": "Arcline Advisory-ის შესახებ",
   "about_subtitle": "გლობალური საკონსულტაციო კომპანია, აგებული პრაქტიკაზე დაფუძნებული ექსპერტიზის მოდელზე, რომელიც უზრუნველყოფს სტრატეგიულ მხარდაჭერას რეალური განხორციელების საფუძველზე",
   "about_heading": "რთული გამოწვევების ტრანსფორმაცია სტრატეგიულ გადაწყვეტილებებად",
@@ -62,7 +63,7 @@
   "form_message": "როგორ შეგვიძლია დაგეხმაროთ?",
   "form_message_placeholder": "მოგვიყევით თქვენი ჯანდაცვის სტრატეგიის გამოწვევის ან ინიციატივის შესახებ...",
   "form_submit": "გაგზავნა",
-  "footer_text": "© 2024 Arcline Advisory. ყველა უფლება დაცულია. | გლობალური სტრატეგია ჯანდაცვის, მმართველობისა და ინოვაციისთვის",
+  "footer_text": "© 2025 Arcline Advisory. ყველა უფლება დაცულია. | გლობალური სტრატეგია ჯანდაცვის, მმართველობისა და ინოვაციისთვის",
   "strategic_advisory_title": "სტრატეგიული კონსულტაცია",
   "strategic_hero_title": "სტრატეგიული კონსულტაცია რთული სისტემებისთვის",
   "strategic_hero_description": "ჩვენ ვმუშაობთ მთავრობებთან, დონორებთან და კერძო სექტორთან ჯანდაცვისა და მმართველობის კომპლექსური სტრატეგიების შემუშავებისა და განხორციელებისთვის.",
@@ -276,5 +277,44 @@
   "exec_impact_desc": "ჩვენი განხორციელების მხარდაჭერა უზრუნველყოფს გაზომვად შედეგებს და მდგრად სისტემის ტრანსფორმაციას.",
   "exec_cta_title": "მზად ხართ თქვენი ჯანდაცვის სტრატეგიის შესასრულებლად?",
   "exec_cta_subtitle": "მიიღეთ თქვენი უფასო განხორციელების კონსულტაცია",
-  "exec_cta_button": "დაჯავშნეთ კონსულტაცია"
+  "exec_cta_button": "დაჯავშნეთ კონსულტაცია",
+  "consultation_hero_title": "დაჯავშნეთ თქვენი სტრატეგიული კონსულტაცია",
+  "consultation_hero_desc": "დაუკავშირდით ჩვენს უფროს მრჩევლებს თქვენი სტრატეგიული გამოწვევების განსახილველად, შესაძლებლობების შესწავლისა და ერთად წინსვლის გზის მოსახაზელად.",
+  "consultation_form_title": "ვისაუბროთ",
+  "consultation_form_subtitle": "მოგვიყევით თქვენი ორგანიზაციის შესახებ და რა გსურთ განიხილოთ. ჩვენი ერთ-ერთი მრჩეველი დაგიკავშირდებათ 24 საათის ფარგლებში.",
+  "form_role": "თქვენი როლი",
+  "form_topic": "ინტერესის ძირითადი თემა",
+  "form_topic_select": "-- აირჩიეთ თემა --",
+  "form_topic_diplomacy": "სტრატეგიული დიპლომატია",
+  "form_topic_risk": "გეოპოლიტიკური რისკი",
+  "form_topic_market": "ბაზრის გაფართოება",
+  "form_topic_other": "სხვა",
+  "consultation_process_title": "ჩვენი კონსულტაციის პროცესი",
+  "consultation_step1_title": "აღმოჩენის ზარი",
+  "consultation_step1_desc": "საწყის საუბარი თქვენი ორგანიზაციის და მიზნების გასაგებად.",
+  "consultation_step2_title": "შეფასება",
+  "consultation_step2_desc": "ჩვენ ვაანალიზებთ თქვენ სიტუაციას და ვიდენტიფიცირებთ ძირითადი სტრატეგიული პრიორიტეტებს.",
+  "consultation_step3_title": "რეკომენდაციები",
+  "consultation_step3_desc": "მორგებული ინსაიტი და სამოქმედო რეკომენდაციები თქვენი საჭიროებების შესაბამისად.",
+  "consultation_step4_title": "შემდეგი ნაბიჯები",
+  "consultation_step4_desc": "თანამშრომლობა ჩვენთან მიმდინარე სტრატეგიული მხარდაჭერისა და განხორციელების კუთხით.",
+  "consultation_benefits_title": "რატომ კონსულტაცია Arcline-თან",
+  "benefit_1_title": "უფროსი ექსპერტიზა",
+  "benefit_1_desc": "პირდაპირი წვდომა უფროს მრჩევლებზე მრავალი ათწლეულის გლობალური გამოცდილებით სტრატეგიისა და გეოპოლიტიკის სფეროებში.",
+  "benefit_2_title": "გლობალური ქსელები",
+  "benefit_2_desc": "გამოიყენეთ ჩვენი დამყარებული ურთიერთობები გადაწყვეტილებების მიმღებებთან მთელ მთავრობაში, მრავალმხრივ ინსტიტუტებში და ინდუსტრიაში.",
+  "benefit_3_title": "კონფიდენციალურობა",
+  "benefit_3_desc": "სრული დისკრეცია და კონფიდენციალურობა ყველა განხილვასა და რეკომენდაციებში.",
+  "consultation_faq_title": "ხშირად დასმული კითხვები",
+  "faq_q1": "რა უნდა მომზადო ჩვენი კონსულტაციისთვის?",
+  "faq_a1": "ჩვენ რეკომენდირებთ გქონდეთ თქვენი ორგანიზაციის მიმდინარე სიტუაციის, ძირითადი გამოწვევებისა და სტრატეგიული მიზნების ნათელი ხედვა. თუმცა, ჩვენი მრჩევლები შეძლებენ გაიდლოთ აღმოჩენის პროცესში, ამიტომ ვრცელი მომზადება არ არის საჭირო.",
+  "faq_q2": "რამდენ ხანს გრძელდება ტიპიური კონსულტაცია?",
+  "faq_a2": "საწყის კონსულტაციები ჩვეულებრივ გრძელდება 60-90 წუთს, რაც საკმარის დროს აძლევს თქვენი საჭიროებების გასაგებად და მნიშვნელოვანი ინსაიტის მიწოდებისთვის. მიმდინარე ჩართულობა შეიძლება მორგებული იყოს თქვენი მოთხოვნებისთვის.",
+  "faq_q3": "რა არის თქვენი ჩვეულებრივი პასუხის დრო?",
+  "faq_a3": "ჩვენ მიზნად ისახავთ პასუხის გაცემა ყველა კონსულტაციის მოთხოვნაზე 24 საათის ფარგლებში. დაჩქარებული საკითხებისთვის, გთხოვთ მიუთითოთ თქვენი ვადა შეტყობინების ველში.",
+  "faq_q4": "აქვს თუ არა ღირებულება საწყის კონსულტაციას?",
+  "faq_a4": "საწყის კონსულტაციები დაპროექტებულია კვლები კონვერსაციებად საკითხის გარეშე. თუ გადაწყვეტ ჩართულობამდე წინსვლას, სიტყვებისა და ფარგლის განხილვას გავაკეთებთ პირდაპირ.",
+  "consultation_cta_title": "მზად ხართ თქვენი სტრატეგიული მოგზაურობის დასაწყებად?",
+  "consultation_cta_desc": "გაიგზავნეთ ფორმა ზემოთ ან დაგვიკავშირდით უშუალოდ ჩვენი ერთ-ერთი უფროს მრჩევლის კონსულტაციის დასაჯავშნელად.",
+  "consultation_form_submit": "დაჯავშნეთ კონსულტაცია"
 }
