--- a/translations/ru.json
+++ b/translations/ru.json
@@ -19,6 +19,7 @@
   "hero_description": "Мы поддерживаем организации государственного и частного сектора в решении комплексных задач в области здравоохранения, политики и инноваций.",
   "hero_btn_services": "Наши услуги",
   "hero_btn_learn": "Узнать больше",
+  "hero_schedule_consultation": "Запланировать консультацию",
   "about_title": "О Arcline Advisory",
   "about_subtitle": "Глобальная консалтинговая фирма, основанная на практическом опыте экспертов",
   "about_heading": "Преобразование сложных задач в стратегические решения",
@@ -62,7 +63,7 @@
   "form_message": "Как мы можем помочь?",
   "form_message_placeholder": "Расскажите о вашей задаче или инициативе в сфере здравоохранения...",
   "form_submit": "Отправить",
-  "footer_text": "© 2024 Arcline Advisory. Все права защищены. | Глобальная стратегия в сфере здравоохранения, управления и инноваций",
+  "footer_text": "© 2025 Arcline Advisory. Все права защищены. | Глобальная стратегия в сфере здравоохранения, управления и инноваций",
   "page_strategic_title": "Стратегические консультации",
   "strategic_hero_title": "Стратегические консультации для сложных систем",
   "strategic_hero_description": "Мы работаем с правительствами, донорами и частным сектором для разработки и реализации комплексных стратегий в области здравоохранения и управления.",
@@ -167,7 +168,7 @@
   "diplomacy_tab": "Дипломатия",
   "risk_tab": "Стратегия рисков",
   "market_tab": "Расширение рынка",
-  "footer_copyright": "© 2025 Arcline Advisory. Все права защищены. | Глобальная стратегия для здравоохранения, управления и инноваций",
+  "footer_copyright": "© 2025 Arcline Advisory. Все права защищены. | Глобальная стратегия в области здравоохранения, управления и инноваций",
   "strategic_advisory_title": "Стратегический консалтинг",
   "program_design_title": "Разработка программ и платформ",
   "program_solutions_title": "Комплексные дизайнерские решения",
@@ -278,5 +279,44 @@
   "exec_impact_desc": "Наша поддержка реализации обеспечивает измеримые результаты и устойчивую трансформацию систем.",
   "exec_cta_title": "Готовы реализовать вашу стратегию здравоохранения?",
   "exec_cta_subtitle": "Получите бесплатную консультацию по реализации",
-  "exec_cta_button": "Запланировать консультацию"
+  "exec_cta_button": "Запланировать консультацию",
+  "consultation_hero_title": "Запланируйте вашу стратегическую консультацию",
+  "consultation_hero_desc": "Свяжитесь с нашими старшими консультантами, чтобы обсудить ваши стратегические задачи, изучить возможности и определить путь вперед.",
+  "consultation_form_title": "Давайте поговорим",
+  "consultation_form_subtitle": "Расскажите нам о вашей организации и о том, что вы хотели бы обсудить. Один из наших консультантов свяжется с вами в течение 24 часов.",
+  "form_role": "Ваша должность",
+  "form_topic": "Основная тема интереса",
+  "form_topic_select": "-- Выберите тему --",
+  "form_topic_diplomacy": "Стратегическая дипломатия",
+  "form_topic_risk": "Геополитический риск",
+  "form_topic_market": "Расширение рынка",
+  "form_topic_other": "Другое",
+  "consultation_process_title": "Наш процесс консультации",
+  "consultation_step1_title": "Звонок обнаружения",
+  "consultation_step1_desc": "Первоначальное обсуждение для понимания вашей организации и целей.",
+  "consultation_step2_title": "Оценка",
+  "consultation_step2_desc": "Мы анализируем вашу ситуацию и выявляем ключевые стратегические приоритеты.",
+  "consultation_step3_title": "Рекомендации",
+  "consultation_step3_desc": "Пользовательские рекомендации и практические советы, соответствующие вашим потребностям.",
+  "consultation_step4_title": "Следующие шаги",
+  "consultation_step4_desc": "Партнерство с нами для постоянной стратегической поддержки и реализации.",
+  "consultation_benefits_title": "Почему консультироваться с Arcline",
+  "benefit_1_title": "Старший опыт",
+  "benefit_1_desc": "Прямой доступ к старшим консультантам с десятилетиями глобального опыта в стратегии и геополитике.",
+  "benefit_2_title": "Глобальные сети",
+  "benefit_2_desc": "Используйте наши устоявшиеся отношения с лицами, принимающими решения, в правительстве, многосторонних учреждениях и промышленности.",
+  "benefit_3_title": "Конфиденциальность",
+  "benefit_3_desc": "Полная конфиденциальность во всех обсуждениях и рекомендациях.",
+  "consultation_faq_title": "Часто задаваемые вопросы",
+  "faq_q1": "Что я должен подготовить к нашей консультации?",
+  "faq_a1": "Рекомендуем иметь четкое представление о текущей ситуации вашей организации, основных задачах и стратегических целях. Однако наши консультанты смогут направить вас в процессе открытия, поэтому обширная подготовка не требуется.",
+  "faq_q2": "Как долго длится типичная консультация?",
+  "faq_a2": "Первоначальные консультации обычно длятся 60-90 минут, что позволяет достаточно времени для понимания ваших потребностей и предоставления значимых рекомендаций. Постоянные консультации могут быть адаптированы к вашим требованиям.",
+  "faq_q3": "Каково ваше обычное время ответа?",
+  "faq_a3": "Мы стремимся ответить на все запросы на консультацию в течение 24 часов. Для срочных вопросов укажите ваши сроки в поле сообщения.",
+  "faq_q4": "Есть ли стоимость первоначальной консультации?",
+  "faq_a4": "Первоначальные консультации предназначены для исследовательских бесед без каких-либо затрат. Если вы решите продолжить сотрудничество, мы обсудим условия и объем напрямую с вами.",
+  "consultation_cta_title": "Готовы начать свое стратегическое путешествие?",
+  "consultation_cta_desc": "Отправьте форму выше или свяжитесь с нами напрямую, чтобы запланировать консультацию с одним из наших старших консультантов.",
+  "consultation_form_submit": "Запланировать консультацию"
 }
